--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,7 @@ body{
     color: #2196F3;
 }
 
-.tel,
-.e-mail{
+.header-contacts{
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -58,16 +57,14 @@ body{
     color: #757575;
 }
 
-.e-mail:hover,
-.e-mail:focus,
-.tel:hover,
-.tel:focus{
+.header-contacts:hover,
+.header-contacts:focus{
     color: #2196F3;
 }
 
-/* ------------------HERO----------------- */
+/* ------------------SECTION HERO----------------- */
 
-.hero{
+.section-hero{
     background-color: #2F303A;
 }
 
@@ -93,10 +90,9 @@ body{
     color: #FFFFFF;
 }
 
-/* ------------------SECTION----------------- */
+/* ------------------TITLES SECTION----------------- */
 
 .title{
-    font-weight: 700;
     font-size: 36px;
     line-height:1.16;
     text-align: center;
@@ -104,8 +100,13 @@ body{
     color: #212121;
 }
 
-.list-item-title{
-    font-weight: 700;
+/* ------------------SECTION ABOUT----------------- */
+
+.section-about {
+background-color:#F5F5F5;
+}
+
+.about-title{
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
@@ -113,11 +114,55 @@ body{
     color: #212121;
 }
 
-.list-item-text{
+.about-text{
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+/* ------------------SECTION TEAM----------------- */
+
+.section-team{
+    background-color: #F5F4FA;
+}
+
+.team-title{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+}
+.team-text{
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+
+/* ------------------FOOTER----------------- */
+
+.footer{
+background-color: #2F303A;
+}
+
+.footer-address{
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: #FFFFFF;
+}
+
+.footer-contacts{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
