--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ font-family: 'Roboto', sans-serif;  */
     --dark-background-text-color:#FFFFFF;
     --accent-color: #2196F3;
     --contacts-footer-text-color: rgba(255, 255, 255, 0.6);
+    --btn-active-color:#188CE8;
 
     --logo-header-color:#000000;
     --logo-footer-color: #FFFFFF;
@@ -116,6 +117,11 @@ body{
     
 }
 
+.hero-btn:hover,
+.hero-btn:focus{
+    background-color:var(--btn-active-color);
+}
+
 /* ------------------SECTION BENEFITS----------------- */
 
 .section-benefits {
@@ -219,6 +225,10 @@ body{
 
 .section-portfolio{
     background-color:var(--primari-background-color);
+}
+
+.portfolio-main-title{
+      /* Приховати */
 }
 
 .filter-btn{
