--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,19 @@ body{
     text-decoration: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 /* ------------------LOGO----------------- */
 
 .header-logo,
@@ -59,6 +72,9 @@ body{
     background-color:var(--primari-background-color);
 }
 
+.nav-list .current{
+    color: var(--accent-color);
+}
 .nav-link{
     font-weight: 500;
     font-size: 14px;
@@ -128,10 +144,6 @@ body{
     background-color:var(--primari-background-color);
 }
 
-.benefits-main-title{
-  /* Приховати */
-}
-
 .benefits-title{
     font-size: 14px;
     line-height: 1.14;
@@ -147,9 +159,10 @@ body{
     color: var(--primary-text-color);
 }
 
-
 /* ------------------SECTION ABOUT----------------- */
-
+.section-about{
+    background-color:var(--primari-background-color); 
+}
 .about-main-title{
     font-size: 36px;
     line-height:1.16;
@@ -157,8 +170,6 @@ body{
     letter-spacing: 0.03em;
     color: var(--title-text-color);
 }
-
-
 
 /* ------------------SECTION TEAM----------------- */
 
@@ -225,10 +236,6 @@ body{
 
 .section-portfolio{
     background-color:var(--primari-background-color);
-}
-
-.portfolio-main-title{
-      /* Приховати */
 }
 
 .filter-btn{
